Front-End: Bugfix for event pg (OSD keyboard hiding password input on small screens)

--- a/css/metroplex.css
+++ b/css/metroplex.css
@@ -90,7 +90,7 @@ body
     padding-left: 20px;
     padding-right: 20px;
 }
-#login-form 
+.backend-index #login-form 
 {
     margin-bottom: 200px;
 }
@@ -143,6 +143,8 @@ a.organization-img-container .organization {width: 100%;}
 {
     background: #2d2d2d;
 }
+.modal .modal-header h3 { font-size: 20px; line-height: 15px;}
+.modal .modal-body h3 {font-size: 20px; line-height: 15px;}
 .modal .modal-footer 
 {
     background: #2d2d2d;
